SERVER-41047 errnoWithDescription only check __ANDROID_API__ if it's defined

(cherry picked from commit b6b3e099b3ed0c7e43b133932e021106c59f2249)